--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
    text-align: center;
    font-size: 100px;
    font-family: cursive;
+   background-color: cyan;
  }
 
  body {}
@@ -11,6 +12,8 @@
    font-size: 50px;
    font-style: italic;
    font-weight: bold;
+   background-color: black;
+   background-image: url("../images/johnnyb.jpeg");
  }
 
  .player2 {
@@ -18,4 +21,5 @@
    font-size: 50px;
    font-style: italic;
    font-weight: bold;
+   background-image: url("../images/player2.html");
  }
